--- a/MultipleInheritance/MultipleInheritance.vcxproj
+++ b/MultipleInheritance/MultipleInheritance.vcxproj
@@ -151,7 +151,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Alien.cpp" />
+    <ClCompile Include="Goblin.cpp" />
+    <ClCompile Include="Grey.cpp" />
     <ClCompile Include="MultipleInheritance.cpp" />
+    <ClCompile Include="Nordic.cpp" />
+    <ClCompile Include="Soldier.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Alien.h" />
+    <ClInclude Include="Goblin.h" />
+    <ClInclude Include="Grey.h" />
+    <ClInclude Include="Nordic.h" />
+    <ClInclude Include="Soldier.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
